objects/jiffle__Consecutive_Meeting__c.object
<CustomObject>
    <description>Consecutive meeting details are captured in this object. Related meetings under CM are captured in Meeting object.</description>
    <fields>
        <fullName>jiffle__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Consecutive Meetings</relationshipLabel>
        <relationshipName>Consecutive_Meetings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>jiffle__Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Campaign</description>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Consecutive Meetings</relationshipLabel>
        <relationshipName>Consecutive_Meetings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>jiffle__Consecutive_Meeting_ID__c</fullName>
        <label>Consecutive Meeting ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Consecutive_Meeting_UUID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Consecutive Meeting UUID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>jiffle__Event__c</fullName>
        <label>Event/Location</label>
        <referenceTo>jiffle__Event__c</referenceTo>
        <relationshipLabel>Consecutive Meetings</relationshipLabel>
        <relationshipName>Consecutive_Meetings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>jiffle__From_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>From Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>jiffle__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Consecutive Meetings</relationshipLabel>
        <relationshipName>Consecutive_Meetings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>jiffle__Request_Status__c</fullName>
        <label>Request Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Consecutive Meeting</label>
    <listViews>
        <fullName>jiffle__All</fullName>
        <columns>NAME</columns>
        <columns>jiffle__Consecutive_Meeting_ID__c</columns>
        <columns>jiffle__Consecutive_Meeting_UUID__c</columns>
        <columns>jiffle__Event__c</columns>
        <columns>jiffle__Request_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>jiffle__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CM-{00000}</displayFormat>
        <label>Consecutive Meeting</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consecutive Meetings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>